Archive2/61/587cdfeb7c2eeb/output
main.cpp: In function 'int main(int, char**)':
main.cpp:10:19: warning: ISO C++ forbids variable length array 'arr' [-Wvla]
     int arr[ size ] = { 100  };
                   ^
main.cpp:10:30: error: variable-sized object 'arr' may not be initialized
     int arr[ size ] = { 100  };
                              ^
